--- a/usr/vibrantmtd_initramfs/jb_init/init.aries.rc
+++ b/usr/vibrantmtd_initramfs/jb_init/init.aries.rc
@@ -19,6 +19,9 @@ on init
     # FIXME: Remove emmc?
     mkdir /datadata 0771 system system
 
+    # Increase read ahead on moviNAND
+    write /sys/devices/virtual/bdi/179:0/read_ahead_kb 1024
+
     # We will create our own ril-daemon service in class 'core' because the
     # rild doesn't like being killed. (During device encryption.)
     stop ril-daemon
