--- a/usr/vibrantmtd_initramfs/jb_init/init.aries.rc
+++ b/usr/vibrantmtd_initramfs/jb_init/init.aries.rc
@@ -21,7 +21,7 @@ on init
 
     # Increase read ahead on moviNAND
     write /sys/devices/virtual/bdi/179:0/read_ahead_kb 1024
-
+	
     # We will create our own ril-daemon service in class 'core' because the
     # rild doesn't like being killed. (During device encryption.)
     stop ril-daemon
@@ -110,7 +110,7 @@ on post-fs-data
 #boot-patch
 exec /sbin/boot-patch.sh
 
-service aries-ril-daemon /system/bin/rild
+service aries-ril-daemon /system/bin/noaslr /system/bin/rild
     class core
     socket rild stream 660 root radio
     socket rild-debug stream 660 radio system
@@ -198,8 +198,6 @@ service bdaddr /system/bin/bdaddr_read
 
 on property:init.svc.bootanim=running
     start bdaddr
-
-# The Froyo RIL won't work for some without being started later.
     start aries-ril-daemon
 
 service hciattach /system/bin/brcm_patchram_plus --enable_hci --enable_lpm \
