--- a/usr/fascinatemtd_initramfs/jb_init/init.aries.rc
+++ b/usr/fascinatemtd_initramfs/jb_init/init.aries.rc
@@ -1,5 +1,4 @@
 import init.aries.usb.rc
-import init.aries.gps.rc
 
 on init
     loglevel 9
@@ -12,9 +11,6 @@ on init
     mkdir /storage/sdcard0 0000 system system
     symlink /storage/sdcard0 /sdcard
     symlink /storage/sdcard0 /mnt/sdcard
-
-    # Increase read ahead on moviNAND
-    write /sys/devices/virtual/bdi/179:0/read_ahead_kb 1024
 
     # We will create our own ril-daemon service in class 'core' because the
     # rild doesn't like being killed. (During device encryption.)
@@ -35,6 +31,7 @@ on boot
 
 # phone
     setprop ro.telephony.call_ring.multiple 0
+
 
 on property:ril.cdma.data_state=1
   restart pppd_cdma
@@ -142,8 +139,12 @@ on post-fs
 
 on post-fs-data
 
-# run sysinit
-#    exec /system/bin/sysinit
+# create data/gps for GPS demon
+    mkdir /data/gps 771 gps system
+    chown gps system /data/gps
+    chmod 771 /data/gps
+    chown gps root /sys/class/sec/gps/GPS_PWR_EN/value
+    chmod 660 /sys/class/sec/gps/GPS_PWR_EN/value
 
     # wi-fi
     mkdir /data/misc/wifi/sockets 0770 wifi wifi
@@ -268,17 +269,18 @@ service geomagneticd /system/vendor/bin/geomagneticd
     user compass
     group system input
 
+service gpsd /system/vendor/bin/gpsd
+    class main
+    user gps
+    group system inet
+
+service gpsfix /system/bin/gpsfix
+    class main
+    user root
+    group root
+    oneshot
+
 service tvout /system/bin/tvoutserver
-    class late_start
-    user system
-    group graphics
-    disabled
-
-service tvouthack /system/bin/tvouthack
-    user system
-    group graphics
-    disabled
-
-on property:dev.bootcomplete=1
-	start tvout
-
+    class main
+    user root
+    group root
