--- a/usr/fascinatemtd_initramfs/jb_init/init.aries.rc
+++ b/usr/fascinatemtd_initramfs/jb_init/init.aries.rc
@@ -1,9 +1,9 @@
 import init.aries.usb.rc
 
+
 on init
     loglevel 9
     export EXTERNAL_STORAGE /storage/sdcard0
-
     # FIXME: Market checks this variable for space-checking, but downloads to /datadata
     export DOWNLOAD_CACHE /data/download
 
@@ -12,6 +12,9 @@ on init
     symlink /storage/sdcard0 /sdcard
     symlink /storage/sdcard0 /mnt/sdcard
     mkdir /datadata 0771 system system
+
+    # Increase read ahead on moviNAND
+    write /sys/devices/virtual/bdi/179:0/read_ahead_kb 1024
 
     # We will create our own ril-daemon service in class 'core' because the
     # rild doesn't like being killed. (During device encryption.)
@@ -32,7 +35,7 @@ on boot
 
 # phone
     setprop ro.telephony.call_ring.multiple 0
-
+	
 
 on property:ril.cdma.data_state=1
   restart pppd_cdma
@@ -148,6 +151,9 @@ on post-fs-data
 
     # setup datadata
     exec /sbin/setupdatadata.sh
+	
+    # run sysinit
+#    exec /system/bin/sysinit
 
 # create data/gps for GPS demon
     mkdir /data/gps 771 gps system
@@ -164,9 +170,6 @@ on post-fs-data
     mkdir /data/download 0770 system cache
 
     setprop vold.post_fs_data_done 1
-
-#boot-patch
-exec /sbin/boot-patch.sh
 
 service aries-ril-daemon /system/bin/rild
     class core
@@ -294,3 +297,4 @@ service tvout /system/bin/tvoutserver
     class main
     user root
     group root
+
