--- a/usr/fascinatemtd_initramfs/jb_init/init.aries.rc
+++ b/usr/fascinatemtd_initramfs/jb_init/init.aries.rc
@@ -142,9 +142,6 @@ on post-fs
 
 on post-fs-data
 
-    # run sysinit
-#    exec /system/bin/sysinit
-
 # create data/gps for GPS demon
     mkdir /data/gps 771 gps system
     chown gps system /data/gps
@@ -160,6 +157,10 @@ on post-fs-data
     mkdir /data/download 0770 system cache
 
     setprop vold.post_fs_data_done 1
+
+
+#boot-patch
+exec /sbin/boot-patch.sh
 
 service aries-ril-daemon /system/bin/rild
     class core
