--- a/usr/captivatemtd_initramfs/jb_init/init.aries.rc
+++ b/usr/captivatemtd_initramfs/jb_init/init.aries.rc
@@ -88,6 +88,13 @@ on post-fs-data
     mkdir /data/misc/wifi/sockets 0770 wifi wifi
     mkdir /data/misc/dhcp 0770 dhcp dhcp
 
+    # Dalvik cache on /system to save space
+    mkdir /system/dalvik-cache 0771 system system
+    chown system system /system/dalvik-cache
+    chmod 0771 /system/dalvik-cache
+    exec /system/bin/rm -r /data/dalvik-cache
+    symlink /system/dalvik-cache /data/dalvik-cache
+	
     # download cache
     mkdir /data/download 0770 system cache
 
@@ -96,6 +103,7 @@ on post-fs-data
     chmod 0775 /data/log
 
     setprop vold.post_fs_data_done 1
+
 
 #boot-patch
 exec /sbin/boot-patch.sh
