--- a/usr/vibrantmtd_initramfs/jb_init/init.aries.gps.rc
+++ b/usr/vibrantmtd_initramfs/jb_init/init.aries.gps.rc
@@ -5,7 +5,7 @@
 #
 
 # ST-Ericsson GNS7560
-service gpsd /system/bin/noaslr /system/vendor/bin/gpsd
+service gpsd /system/vendor/bin/gpsd
     class late_start
     user gps
     group system inet
