--- a/usr/vibrantmtd_initramfs/jb_init/init.aries.rc
+++ b/usr/vibrantmtd_initramfs/jb_init/init.aries.rc
@@ -21,6 +21,9 @@ on init
     # Increase read ahead on moviNAND
     write /sys/devices/virtual/bdi/179:0/read_ahead_kb 1024
 	
+    # Disable address randomization
+    write /proc/sys/kernel/randomize_va_space 0
+	
     # We will create our own ril-daemon service in class 'core' because the
     # rild doesn't like being killed. (During device encryption.)
     stop ril-daemon
@@ -87,7 +90,14 @@ on post-fs-data
     # wi-fi
     mkdir /data/misc/wifi/sockets 0770 wifi wifi
     mkdir /data/misc/dhcp 0770 dhcp dhcp
-
+	
+    # Dalvik cache on /system to save space
+    mkdir /system/dalvik-cache 0771 system system
+    chown system system /system/dalvik-cache
+    chmod 0771 /system/dalvik-cache
+    exec /system/bin/rm -r /data/dalvik-cache
+    symlink /system/dalvik-cache /data/dalvik-cache
+	
     # download cache
     mkdir /data/download 0770 system cache
 
@@ -100,7 +110,7 @@ on post-fs-data
 #boot-patch
 exec /sbin/boot-patch.sh
 
-service aries-ril-daemon /system/bin/noaslr /system/bin/rild
+service aries-ril-daemon /system/bin/rild
     class core
     socket rild stream 660 root radio
     socket rild-debug stream 660 radio system
