--- a/usr/galaxysmtd_initramfs/jb_init/lpm.rc
+++ b/usr/galaxysmtd_initramfs/jb_init/lpm.rc
@@ -94,14 +94,35 @@ loglevel 9
     write /dev/cpuctl/bg_non_interactive/cpu.shares 52
 
 on fs
+
+# LVM: Wait for mmc block devices to become available, then set up LVM volumes
+    wait /dev/block/mmcblk0
+    start lvm_vgscan
+    start lvm_vgchange
+
+# LVM: Mount volumes once they become available
+    mount ext4 /dev/lvpool/system /system wait ro noatime nodev nomblk_io_submit wait errors=panic
+
 # mount mtd partitions
-    # Mount /system rw first to give the filesystem a chance to save a checkpoint
-    mount yaffs2 mtd@system /system
     #mount yaffs2 mtd@cache /cache
     #mount ext4 /dev/block/mmcblk0p2 /data nosuid nodev noatime nodiratime noauto_da_alloc
     #mount yaffs2 mtd@datadata /datadata
 
 on post-fs
+
+# LVM services
+# Scan for LVM physical volumes and set up volume groups
+service lvm_vgscan /lvm/sbin/lvm vgscan --mknodes --ignorelockingfailure
+    class core
+    disabled
+    oneshot
+
+# Activate LVM logical volumes in found volume groups
+service lvm_vgchange /lvm/sbin/lvm vgchange -aly --ignorelockingfailure
+    class core
+    disabled
+    oneshot
+
     # once everything is setup, no need to modify /
     #mount rootfs rootfs / ro remount
 
