--- a/usr/fascinatemtd_initramfs/jb_init/init.aries.rc
+++ b/usr/fascinatemtd_initramfs/jb_init/init.aries.rc
@@ -11,6 +11,7 @@ on init
     mkdir /storage/sdcard0 0000 system system
     symlink /storage/sdcard0 /sdcard
     symlink /storage/sdcard0 /mnt/sdcard
+    mkdir /datadata 0771 system system
 
     # We will create our own ril-daemon service in class 'core' because the
     # rild doesn't like being killed. (During device encryption.)
@@ -40,8 +41,16 @@ on property:ril.cdma.data_state=0
   stop pppd_cdma
 
 on fs
-    mount ext4 /dev/block/mmcblk0p1 /system ro noatime nodev nomblk_io_submit errors=panic wait
-    mount ext4 /dev/block/mmcblk0p2 /cache noatime nodev nosuid nomblk_io_submit errors=panic wait
+    mount yaffs2 mtd@datadata /datadata
+
+# LVM: Wait for mmc block devices to become available, then set up LVM volumes
+    wait /dev/block/mmcblk0
+    start lvm_vgscan
+    start lvm_vgchange
+
+# LVM: Mount volumes once they become available
+    mount ext4 /dev/lvpool/system /system wait ro
+    mount ext4 /dev/lvpool/userdata /data wait noatime nosuid nodev nomblk_io_submit
 
 # permissions for bluetooth.
     chown bluetooth bluetooth /dev/s3c2410_serial0
@@ -58,6 +67,10 @@ on fs
     chmod 660 /sys/class/sec/uart_switch/UART_SEL/value
 
 on post-fs
+
+   # We chown/chmod /datadata again so because mount is run as root + defaults    
+    chown system system /datadata    
+    chmod 0771 /datadata
 
 # allow system to modify cpufreq control files
     chown root system /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor
@@ -140,6 +153,15 @@ on post-fs
 
 on post-fs-data
 
+    # for migrating download provider's cache out of the small /data/data    
+    mkdir /data/data2 0771 system system   
+
+    # setup datadata    
+    exec /sbin/setupdatadata.sh
+
+    #boot-patch
+    exec /sbin/boot-patch.sh
+
 # create data/gps for GPS demon
     mkdir /data/gps 771 gps system
     chown gps system /data/gps
@@ -156,8 +178,19 @@ on post-fs-data
 
     setprop vold.post_fs_data_done 1
 
-#boot-patch
-exec /sbin/boot-patch.sh
+
+# LVM services
+# Scan for LVM physical volumes and set up volume groups
+service lvm_vgscan /lvm/sbin/lvm vgscan --mknodes --ignorelockingfailure
+    class core
+    disabled
+    oneshot
+
+# Activate LVM logical volumes in found volume groups
+service lvm_vgchange /lvm/sbin/lvm vgchange -aly --ignorelockingfailure
+    class core
+    disabled
+    oneshot
 
 service aries-ril-daemon /system/bin/rild
     class core
@@ -274,15 +307,20 @@ service gpsd /system/vendor/bin/gpsd
     class main
     user gps
     group system inet
+    disabled
 
 service gpsfix /system/bin/gpsfix
     class main
     user root
     group root
     oneshot
+    disabled
 
 service tvout /system/bin/tvoutserver
     class main
     user root
     group root
 
+on property:dev.bootcomplete=1
+	start gpsd
+	start gpsfix
