--- a/arch/arm/plat-s5p/Kconfig
+++ b/arch/arm/plat-s5p/Kconfig
@@ -121,7 +121,7 @@ config S5P_IDLE2_STATS
 	bool "Export IDLE2 statistics to debugfs"
 	depends on S5P_IDLE2 && DEBUG_FS
 
-	default n
+	default y
 	help
 	  Export IDLE2 statistics to debugfs.
 	  /sys/kernel/debug/idle2/statistics
