--- a/drivers/misc/Kconfig
+++ b/drivers/misc/Kconfig
@@ -584,6 +584,12 @@ config PN544
 	help
 	  NXP PN544 Near Field Communication controller support.
 
+config SAMSUNG_PARAM
+	bool "Samsung Param Driver"
+	depends on MACH_ARIES
+	default n
+	help
+	  Driver for communication with Samsung's secondary bootloader
 
 config CUSTOM_VOLTAGE
        bool "Support for Custom Voltage"
