--- a/usr/fascinatemtd_initramfs/jb_init/init.aries.rc
+++ b/usr/fascinatemtd_initramfs/jb_init/init.aries.rc
@@ -264,6 +264,10 @@ service iprenew_bnep0 /system/bin/dhcpcd -n
     disabled
     oneshot
 
+on property:init.svc.bootanim=running
+    start gpsd
+    start geomagneticd
+
 service hciattach /system/bin/brcm_patchram_plus --enable_hci --enable_lpm \
     --baudrate 3000000 --patchram /vendor/firmware/bcm4329.hcd /dev/s3c2410_serial0
     class main
@@ -309,5 +313,3 @@ service tvout /system/bin/tvoutserver
     group root
 
 on property:dev.bootcomplete=1
-	start gpsd
-        start geomagneticd
