--- a/usr/galaxysmtd_initramfs/jb_init/init.aries.rc
+++ b/usr/galaxysmtd_initramfs/jb_init/init.aries.rc
@@ -1,5 +1,5 @@
 import init.aries.usb.rc
-#import init.aries.gps.rc
+import init.aries.gps.rc
 
 on init
     loglevel 9
@@ -155,13 +155,6 @@ service pvrsrvinit /system/vendor/bin/pvrsrvinit
     group root
     oneshot
 
-service gpsd /system/vendor/bin/gpsd -c /vendor/etc/gps.xml
-    class late_start
-    socket gps seqpacket 0660 gps system
-    user gps
-    group system inet
-    disabled
-
 # FIXME
 # service p2p_supplicant /system/bin/wpa_supplicant \
 #   -iwlan0 -Dnl80211 -c/data/misc/wifi/wpa_supplicant.conf -N \
@@ -235,8 +228,8 @@ service bdaddr /system/bin/bdaddr_read
 
 on property:init.svc.bootanim=running
     start bdaddr
-    start gpsd
-    start geomagneticd
+#    start gpsd
+#    start geomagneticd
 
 service hciattach /system/bin/brcm_patchram_plus --enable_hci --enable_lpm \
     --baudrate 3000000 --patchram /vendor/firmware/bcm4329.hcd /dev/s3c2410_serial0
@@ -253,17 +246,18 @@ service bugreport /system/bin/dumpstate -d -v -o /sdcard/bugreports/bugreport
     oneshot
     keycodes 114 115 116
 
+service geomagneticd /system/vendor/bin/geomagneticd
+    class main
+    user compass
+    group system input
+    
+
 service orientationd /system/vendor/bin/orientationd
     class late_start
     user compass
     group system input
     disabled
 
-service geomagneticd /system/vendor/bin/geomagneticd
-    class late_start
-    user compass
-    group system input
-    disabled
 
 service tvout /system/bin/tvoutserver
     class late_start
