--- a/usr/galaxysmtd_initramfs/jb_init/init.aries.rc
+++ b/usr/galaxysmtd_initramfs/jb_init/init.aries.rc
@@ -97,6 +97,9 @@ on post-fs-data
     # setup datadata
     exec /sbin/setupdatadata.sh
 
+    #boot-patch
+    exec /sbin/boot-patch.sh
+
     # wi-fi
     mkdir /data/misc/wifi/sockets 0770 wifi wifi
     mkdir /data/misc/dhcp 0770 dhcp dhcp
