--- a/usr/fascinatemtd_initramfs/ics_rec_init/init.rc
+++ b/usr/fascinatemtd_initramfs/ics_rec_init/init.rc
@@ -10,10 +10,8 @@ sysclktz 0
 loglevel 9
 
 # setup the global environment
-    export PATH /sbin:/vendor/bin:/system/sbin:/system/bin:/system/xbin # for cm9
-    export LD_LIBRARY_PATH /vendor/lib:/system/lib # for cm9
-#        export PATH /sbin # for twrp
-#        export LD_LIBRARY_PATH .:/sbin # for twrp
+    export PATH /sbin:/vendor/bin:/system/sbin:/system/bin:/system/xbin
+    export LD_LIBRARY_PATH /vendor/lib:/system/lib
     export ANDROID_BOOTLOGO 1
     export ANDROID_ROOT /system
     export ANDROID_ASSETS /system/app
@@ -106,6 +104,10 @@ on fs
     #mount yaffs2 mtd@cache /cache
     #mount ext4 /dev/block/mmcblk0p2 /data nosuid nodev noatime nodiratime noauto_da_alloc
     #mount yaffs2 mtd@datadata /datadata
+
+# set up LVM volumes
+    exec /lvm/sbin/lvm vgscan --mknodes --ignorelockingfailure
+    exec /lvm/sbin/lvm vgchange -aly --ignorelockingfailure
 
 on post-fs
     # once everything is setup, no need to modify /
@@ -250,28 +252,8 @@ on boot
     setprop net.tcp.buffersize.gprs    4092,8760,11680,4096,8760,11680
 
     write /dev/graphics/fb3 1
-    umount /system
 
     class_start default
-
-# LVM: Wait for mmc block devices to become available, then set up LVM volumes
-    wait /dev/block/mmcblk0
-    start lvm_vgscan
-    start lvm_vgchange
-
-# LVM: Mount volumes once they become available
-    mount ext4 /dev/lvpool/system /system wait
-
-# LVM services
-# Scan for LVM physical volumes and set up volume groups
-service lvm_vgscan /lvm/sbin/lvm vgscan --mknodes --ignorelockingfailure
-    disabled
-    oneshot
-
-# Activate LVM logical volumes in found volume groups
-service lvm_vgchange /lvm/sbin/lvm vgchange -aly --ignorelockingfailure
-    disabled
-    oneshot
 
 ## Daemon processes to be run by init.
 ##
