--- a/usr/fascinatemtd_initramfs/jb_init/init.aries.rc
+++ b/usr/fascinatemtd_initramfs/jb_init/init.aries.rc
@@ -1,9 +1,9 @@
 import init.aries.usb.rc
-import init.aries.gps.rc
 
 on init
     loglevel 9
     export EXTERNAL_STORAGE /storage/sdcard0
+
     # FIXME: Market checks this variable for space-checking, but downloads to /datadata
     export DOWNLOAD_CACHE /data/download
 
@@ -11,6 +11,7 @@ on init
     mkdir /storage/sdcard0 0000 system system
     symlink /storage/sdcard0 /sdcard
     symlink /storage/sdcard0 /mnt/sdcard
+
     mkdir /datadata 0771 system system
 
     # We will create our own ril-daemon service in class 'core' because the
@@ -33,24 +34,26 @@ on boot
 # phone
     setprop ro.telephony.call_ring.multiple 0
 	
+# set BT MAC address
+    setprop ro.bt.bdaddr_path /data/.bdaddr
 
 on property:ril.cdma.data_state=1
-  restart pppd_cdma
+    restart pppd_cdma
   
 on property:ril.cdma.data_state=0
-  stop pppd_cdma
+    stop pppd_cdma
+
+on property:ril.bt_macaddr=*
+    start bdaddr
 
 on fs
+# LVM: set up LVM volumes
+    exec /lvm/sbin/lvm vgscan --mknodes --ignorelockingfailure
+    exec /lvm/sbin/lvm vgchange -aly --ignorelockingfailure
+
+    mount ext4 /dev/block/mmcblk0p3 /cache noatime nodev nosuid nomblk_io_submit errors=panic wait
     mount yaffs2 mtd@datadata /datadata
-
-# LVM: Wait for mmc block devices to become available, then set up LVM volumes
-    wait /dev/block/mmcblk0
-    start lvm_vgscan
-    start lvm_vgchange
-
-# LVM: Mount volumes once they become available
-    mount ext4 /dev/lvpool/system /system wait ro
-    mount ext4 /dev/lvpool/userdata /data wait noatime nosuid nodev nomblk_io_submit
+    mount_all fstab.aries
 
 # permissions for bluetooth.
     chown bluetooth bluetooth /dev/s3c2410_serial0
@@ -68,10 +71,8 @@ on fs
 
 on post-fs
 
-   # We chown/chmod /datadata again so because mount is run as root + defaults    
-    chown system system /datadata    
+    chown system system /datadata
     chmod 0771 /datadata
-
 
 # for sensor control
     chown root input /sys/class/input/input0/enable
@@ -144,16 +145,22 @@ on post-fs
 
     chown root input /dev/i2c-12
 
+    # trigger governor change uevent
+    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor ondemand
+
 on post-fs-data
+    # for migrating download provider's cache out of the small /data/data
+    mkdir /data/data2 0771 system system
 
-    # for migrating download provider's cache out of the small /data/data    
-    mkdir /data/data2 0771 system system   
-
-    # setup datadata    
+    # setup datadata
     exec /sbin/setupdatadata.sh
 
-    #boot-patch
-    exec /sbin/boot-patch.sh
+# create data/gps for GPS demon
+    mkdir /data/gps 771 gps system
+    chown gps system /data/gps
+    chmod 771 /data/gps
+    chown gps root /sys/class/sec/gps/GPS_PWR_EN/value
+    chmod 660 /sys/class/sec/gps/GPS_PWR_EN/value
 
     # wi-fi
     mkdir /data/misc/wifi/sockets 0770 wifi wifi
@@ -163,20 +170,6 @@ on post-fs-data
     mkdir /data/download 0770 system cache
 
     setprop vold.post_fs_data_done 1
-
-
-# LVM services
-# Scan for LVM physical volumes and set up volume groups
-service lvm_vgscan /lvm/sbin/lvm vgscan --mknodes --ignorelockingfailure
-    class core
-    disabled
-    oneshot
-
-# Activate LVM logical volumes in found volume groups
-service lvm_vgchange /lvm/sbin/lvm vgchange -aly --ignorelockingfailure
-    class core
-    disabled
-    oneshot
 
 service aries-ril-daemon /system/bin/rild
     class core
@@ -288,12 +281,20 @@ service geomagneticd /system/vendor/bin/geomagneticd
     class main
     user compass
     group system input
-    
+
+service gpsd /system/vendor/bin/gpsd
+    class main
+    user system
+    group system inet
+
+service bdaddr /system/bin/bdaddr_read-cdma
+    class main
+    user root
+    disabled
+    oneshot
+
 service tvout /system/bin/tvoutserver
     class main
     user root
     group root
-    disabled
 
-on property:dev.bootcomplete=1
-    start tvout
